# QmlBoard

./: .gitignore  CMakeLists.txt  HBoard.pro  HBoard_global.h  hboard.cpp  hboard.h  hboardmanager.cpp  hboardmanager.h  hboarduicontrol.cpp  hboarduicontrol.h  himagemapboard.cpp  himagemapboard.h  hselectstyle.cpp  hselectstyle.h  qml_render.txt
Common/: hcommons.cpp  hcommons.h  hjsoncommon.cpp  hjsoncommon.h  hplanvector.cpp  hplanvector.h  hsgnodecommon.cpp  hsgnodecommon.h  hthreadpool.cpp  hthreadpool.h
Factory/: hkeyfactory.cpp  hkeyfactory.h  hnodefactory.cpp  hnodefactory.h
HChart/: hhistogramchart.cpp  hhistogramchart.h
Handles/: hhandlearrow.cpp  hhandlearrow.h  hhandlebase.cpp  hhandlebase.h  hhandleflyweight.cpp  hhandleflyweight.h  hhandlemove.cpp  hhandlemove.h  hhandlepaint.cpp  hhandlepaint.h  hhandlerule.cpp  hhandlerule.h
Install/opencv/Debug/include/opencv2/: opencv_modules.hpp
Install/opencv/Debug/x64/vc15/lib/: OpenCVModules-debug.cmake  opencv_aruco451d.lib  opencv_bgsegm451d.lib  opencv_bioinspired451d.lib  opencv_calib3d451d.lib  opencv_ccalib451d.lib  opencv_core451d.lib  opencv_cudaarithm451d.lib  opencv_cudabgsegm451d.lib  opencv_cudacodec451d.lib  opencv_cudafeatures2d451d.lib  opencv_cudafilters451d.lib  opencv_cudaimgproc451d.lib  opencv_cudalegacy451d.lib  opencv_cudaobjdetect451d.lib  opencv_cudaoptflow451d.lib  opencv_cudastereo451d.lib  opencv_cudawarping451d.lib  opencv_cudev451d.lib  opencv_datasets451d.lib  opencv_dnn451d.lib  opencv_dnn_objdetect451d.lib  opencv_dnn_superres451d.lib  opencv_dpm451d.lib  opencv_face451d.lib  opencv_features2d451d.lib  opencv_flann451d.lib  opencv_fuzzy451d.lib  opencv_gapi451d.lib  opencv_hfs451d.lib  opencv_highgui451d.lib  opencv_img_hash451d.lib  opencv_imgcodecs451d.lib  opencv_imgproc451d.lib  opencv_intensity_transform451d.lib  opencv_line_descriptor451d.lib  opencv_mcc451d.lib  opencv_ml451d.lib  opencv_objdetect451d.lib  opencv_optflow451d.lib  (+23 more)
Install/opencv/RelWithDebInfo/: setup_vars_opencv4.cmd
Install/opencv/RelWithDebInfo/x64/vc15/lib/: OpenCVConfig.cmake  opencv_dpm451.lib  (+40 more)
Install/opencv/Release/include/opencv2/: cvconfig.h
Nodes/: hblurredimage.cpp  hblurredimage.h  hcvmatnode.cpp  hcvmatnode.cpp2  hcvmatnode.h  hcvmatnode.hpp  hcvmatnode2.hpp  hdashnode.cpp  hdashnode.h  hdragnode.cpp  hdragnode.h  hfillnode.cpp  hfillnode.h  himagemapnode.cpp  himagemapnode.h  himagenode.cpp  himagenode.h  hmultshapenode.cpp  hmultshapenode.h  hnodebase.cpp  hnodebase.h  hrectnode.cpp  hrectnode.h  hreviewnodemanager.cpp  hreviewnodemanager.h  hshapenodes.cpp  hshapenodes.h  hshaperect.cpp  hshaperect.h
Operators/: hboardactionbase.cpp  hboardactionbase.h  hcommandbase.cpp  hcommandbase.h
Storage/: hstoragebase.cpp  hstoragebase.h
examples/: CMakeLists.txt  hdrawmathandle.cpp  hdrawmathandle.h  main.cpp  main.qml  qml.qrc
examples/blurred_image/: CMakeLists.txt  main.cpp  main.qml  maincontrol.cpp  maincontrol.h
examples/chart/: CMakeLists.txt  hhandlehistogramchart.cpp  hhandlehistogramchart.h  main.cpp  main.qml
examples/face/: CMakeLists.txt  main.cpp  main.qml  maincontrol.cpp  maincontrol.h
examples/handles/: CMakeLists.txt  main.cpp  main.qml
examples/nodes/: CMakeLists.txt  hnodescontrol.cpp  hnodescontrol.h  main.cpp  main.qml
examples/opencv/: CMakeLists.txt  hqdebug.cpp  hqdebug.h  main.cpp  main.qml  qml.qrc
examples/opencv/control/: huicontrol.cpp  huicontrol.h
examples/opencv/model/: hcameraimagenode.cpp  hcameraimagenode.h  hcvmatboard.cpp  hcvmatboard.h  hcvmatnode.cpp  hcvmatnode.h  hcvmatnode2.cpp  hcvmatnode2.h  hcvmatnode_rotate.cpp  hcvmatnode_rotate.h  henummodel.cpp  henummodel.h  hhandlehistogramchart.cpp  hhandlehistogramchart.h  hmulthandles.cpp  hmulthandles.h  htrans.h  huimodel.cpp  huimodel.h
examples/opencv/qml/: HCheckBox.qml
examples/opencv/qml/GlobalItems/BaseTypeEditList/: HBaseTypeEditList.qml  HJsonEdit.qml
examples/opencv/qml/GlobalItems/ExpandListView/: ExpandBtn.qml  ExpandListView.qml
examples/opencv/qml/GlobalItems/HAnimation/: HClickAnimation.qml  HNumberAnimation.qml
examples/opencv/qml/GlobalItems/HAnimationComponents/: HAnimationBottomBar.qml  HAnimationLeftBar.qml  HAnimationRightBar.qml  HAnimationTopBar.qml  HWaitComponent.qml  HWaitDialog.qml
examples/opencv/qml/GlobalItems/HBaseItem/: HButton.qml  HCheckBox.qml  HComboBox.qml  HDeleteTipDialog.qml  HErrorBox.qml  HFMComboBox.qml  HFlow.qml  HFlushComboBox.qml  HGroupBox.qml  HHistogramCharDialog.qml  HHorizontalImageButtons.qml  HImageButton.qml  HImageFlagButton.qml  HImageTextButton.qml  HIndexShowView.qml  HListView.qml  HMagnifierComboBox.qml  HMouseArea.qml  HNumberInput.qml  HRectTextFlagButton.qml  HRectangle.qml  HRectangleTextButton.qml  HRectangleTipString.qml  HSliderBlock.qml  HSuperLinkText.qml  HTabView.qml  HTableView.qml  HText.qml  HTextArea.qml  HTextInput.qml  HTipComfirmationDialog.qml  HWindow.qml
examples/opencv/qml/GlobalItems/HTipItems/: HTipComboBox.qml  HTipFMComboBox.qml  HTipFlushComboBox.qml  HTipNumberInput.qml  HTipNumberInputUnit.qml  HTipRectangle.qml  HTipSilderBlock.qml  HTipStringInput.qml
examples/opencv/qml/operators/: CVPoint.qml  CVSize.qml
examples/opencv/qml/parmeters/: HBlurParameters.qml  HTranslateParamter.qml
examples/opencv/qml/tabs/: HAffineTransformationTab.qml  HBlurredTab.qml
examples/picture/: CMakeLists.txt  main.qml
examples/qml/ICProgram/: ICProgramMain.qml
examples/qml/ICProgram/HFacePlate/: HFunctionalRegions.qml  HGlobalButtonsArea.qml  HMachineStatus.qml  HMainBoard.qml  HScanControl.qml
examples/qml/ICProgram/HFacePlate/HTabs/: HDefectView.qml  HHandles.qml  HHeterochromeView.qml
examples/qml/ICProgram/HGlobalItems/: HButton.qml  HErrorBox.qml  HFileDialog.qml  HImageButton.qml  HRectangle.qml  HText.qml  HTextInput.qml
examples/thumbnail/: CMakeLists.txt  hthumbailhandle.cpp  hthumbailhandle.h  hthumbnailboard.cpp  hthumbnailboard.h  main.cpp  main.qml  maincontrol.cpp  maincontrol.h
examples/trains/: CMakeLists.txt  hnodescontrol.cpp  hnodescontrol.h  htrans.cpp  main.cpp  main.qml
(+23 files in other folders)
